--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,24 @@
 @tailwind base;
 @tailwind components;
+
+.message a {
+  @apply text-lime-300 underline underline-offset-1 hover:text-lime-400;
+}
+
+.message ol {
+  @apply mt-4 list-decimal list-inside;
+}
+
+.message ol > li {
+  @apply mt-2;
+}
+
+.message ul li {
+  @apply list-disc list-inside;
+}
+
+.message ol ul {
+  @apply ml-3;
+}
+
 @tailwind utilities;
